--- a/source/jade/organizations-item.jade
+++ b/source/jade/organizations-item.jade
@@ -218,6 +218,38 @@ block append content
 				.bcon
 					.item
 						.iname 
+							a(href="#") Станок токарный с ЧПУ
+						.itext Микроскопия, анализ химического состава
+						.irating.mar-bot-10
+							span Лаборатория
+							ul
+								li.star
+								li.star
+								li.star
+								li
+								li
+						.itext-ext
+							p.sm-mar
+								span.dark  Выполняемые работы<br> 
+								span.grey Оптическая микроскопия.
+							p.sm-mar 
+								span.dark  Выполняемые работы<br> 
+								span.grey Оптическая микроскопия.
+						.itext-ext
+							a(href="#") Национальный исследовательский Томский политехнический университет
+						.contacts-box
+							span.phone +7 495 675 87 98
+							span.email
+								a(href="#").grey-link email@email.com
+						.tags
+							a(href="#").tags-item
+								span.name Машиностроение
+								span.count 12
+							a(href="#").tags-item
+								span.name Металлообработка
+								span.count.empty
+					.item
+						.iname 
 							a(href="#") Выставка научного оборудования НИИ спорта РГУФКСМиТ
 						.irating.mar-bot-10
 							span EBV-23
@@ -283,29 +315,6 @@ block append content
 						.itext 10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br>
 						.itext-ext
 							span.dark Организация (ВУЗ / ГНЦ): 
-							a(href="#") Национальный исследовательский Томский политехнический университет
-						.tags
-							a(href="#").tags-item
-								span.name Машиностроение
-								span.count 12
-							a(href="#").tags-item
-								span.name Металлообработка
-								span.count.empty
-					.item
-						.iname 
-							a(href="#") Станок токарный с ЧПУ
-						.itext Микроскопия, анализ химического состава
-						.irating.irating_margin2
-							ul
-								li.star
-								li.star
-								li.star
-								li
-								li
-						.itext 10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br>
-						.itext-ext
-							span.dark  Организация: 
-							span.grey (ВУЗ / ГНЦ): 
 							a(href="#") Национальный исследовательский Томский политехнический университет
 						.tags
 							a(href="#").tags-item
