--- a/site/css/style.css
+++ b/site/css/style.css
@@ -726,6 +726,9 @@ body {
 i {
   font-style: normal;
 }
+.center {
+  text-align: center;
+}
 .btn-orange,
 .btn-orange-big,
 .btn-orange-wide,
@@ -2829,53 +2832,67 @@ h1.service-title {
 .box-news .bcon {
   padding: 0 20px;
 }
-.box-news .bcon .item {
+.box-news .bcon .item,
+.l-boxgrey .item-object {
   padding-bottom: 20px;
 }
-.box-news .bcon .item a {
+.box-news .bcon .item a,
+.l-boxgrey .item-object a {
   display: inline-block;
   text-decoration: none;
   color: #333;
 }
-.box-news .bcon .item a:hover {
+.box-news .bcon .item a:hover,
+.l-boxgrey .item-object a:hover {
   color: #ff8c4d;
 }
-.box-news .bcon .item .idate {
+.box-news .bcon .item .idate,
+.l-boxgrey .item-object .idate {
   display: 11px;
   color: #ccc;
 }
-.box-news .bcon .item .iname {
+.box-news .bcon .item .iname,
+.l-boxgrey .item-object .iname {
   padding-bottom: 5px;
   font-size: 14px;
 }
-.box-news .bcon .item .iname a {
+.box-news .bcon .item .iname a,
+.l-boxgrey .item-object .iname a {
   line-height: 20px;
 }
-.box-news .bcon .item .iprev {
+.box-news .bcon .item .iprev,
+.l-boxgrey .item-object .iprev {
   padding-bottom: 10px;
 }
-.box-news .bcon .item .itext {
+.box-news .bcon .item .itext,
+.l-boxgrey .item-object .itext {
   padding-bottom: 15px;
   color: #999;
   font-size: 12px;
 }
-.box-news .bcon .item .itext a {
+.box-news .bcon .item .itext a,
+.l-boxgrey .item-object .itext a {
   color: #999;
 }
-.box-news .bcon .item .itext p {
+.box-news .bcon .item .itext p,
+.l-boxgrey .item-object .itext p {
   margin-bottom: 10px;
 }
-.box-news .bcon .item .itext-ext {
+.box-news .bcon .item .itext-ext,
+.l-boxgrey .item-object .itext-ext {
   padding-bottom: 10px;
   color: #333;
 }
-.box-news .bcon .item .itext-ext .grey {
+.box-news .bcon .item .itext-ext .grey,
+.l-boxgrey .item-object .itext-ext .grey {
   color: #999;
 }
-.box-news .bcon .item .itext-ext a {
+.box-news .bcon .item .itext-ext a,
+.l-boxgrey .item-object .itext-ext a {
   color: #f85800;
 }
-.box-news .bcon .item .itext-ext a:hover {
+.box-news .bcon .item .itext-ext a:hover,
+.l-boxgrey .item-object .itext-ext a:hover {
   text-decoration: underline;
 }
 .box-news_dotted .item {
@@ -3863,6 +3880,43 @@ h1.service-title {
   padding-right: 30px;
   width: 15%;
   vertical-align: top;
+  text-align: center;
+}
+.item-3col .iprev .feedback {
+  display: inline-block;
+  margin-top: 15px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #333;
+}
+.item-3col .iobjects {
+  padding: 10px 0;
+}
+.item-3col .iobjects a {
+  position: relative;
+  display: inline-block;
+  padding: 5px 30px 5px 10px;
+  border: 1px solid #ff8c4d;
+  border-radius: 3px;
+  font-size: 14px;
+}
+.item-3col .iobjects a:hover {
+  text-decoration: none;
+  background: rgba(255,140,77,0.1);
+}
+.item-3col .iobjects a:after {
+  position: absolute;
+  right: 10px;
+  top: 13px;
+  content: ' ';
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-top-color: #1d1d1b;
+  border-width: 5px;
 }
 .item-3col .icon {
   display: table-cell;
@@ -3909,6 +3963,84 @@ h1.service-title {
 .item-3col .iconright {
   display: table-cell;
   width: 25%;
+}
+.item-3col.active .iobjects a {
+  background: rgba(255,140,77,0.2);
+}
+.col-4 {
+  display: table-cell;
+  width: 25%;
+  padding: 10px;
+}
+.l-boxgrey {
+  display: none;
+  position: relative;
+  padding: 0 10px;
+  margin: 20px -20px -21px -20px;
+  background: #fafafa;
+  border: 1px solid #e5e5e5;
+  box-shadow: inset 0 5px 11px rgba(1,1,1,0.1);
+}
+.l-boxgrey:before,
+.l-boxgrey:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.l-boxgrey:after {
+  content: " ";
+  position: absolute;
+  left: 48.5%;
+  top: -1px;
+  width: 30px;
+  height: 12px;
+  background: url("../img/sep-down.png") no-repeat;
+}
+.l-boxgrey .boxgrey-name {
+  padding: 20px 0 5px 10px;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+.l-boxgrey .boxgrey-name:before,
+.l-boxgrey .boxgrey-name:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.l-boxgrey .boxgrey-name a.close {
+  float: left;
+  display: block;
+  margin: -8px 15px 0 0;
+  width: 32px;
+  height: 32px;
+  background: url("../img/icons/close-grey.png") no-repeat;
+  opacity: 0.7;
+}
+.l-boxgrey .boxgrey-name a.close:hover {
+  opacity: 1;
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.l-boxgrey .boxgrey-name h3 {
+  float: left;
+  margin: 0;
+  font-size: 14px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.l-boxgrey .item-object {
+  padding: 10px 20px;
+  background: #fff;
+  border: 1px solid #e5e5e5;
+}
+.l-boxgrey .item-object .irating {
+  padding: 10px 0 5px 0;
+}
+.l-boxgrey .show-more {
+  padding: 20px 0;
+  text-align: center;
+  text-transform: uppercase;
 }
 .box-text-item {
   position: relative;
