--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -35,7 +35,8 @@ body
 		font-size 16px
 i 
 	font-style normal
-
+.center
+	text-align center
 // ===============================================
 
 .btn-orange
@@ -2121,9 +2122,40 @@ h1.service-title
 		padding-right 30px
 		width 15% 
 		vertical-align top
+		text-align center
+		.feedback
+			display inline-block
+			margin-top 15px
+			text-align center
+			text-transform uppercase
+			color #333
+	.iobjects
+		padding 10px 0
+		a
+			position relative
+			display inline-block
+			padding 5px 30px 5px 10px
+			border 1px solid #FF8C4D
+			border-radius 3px
+			font-size 14px
+			&:hover
+				tdn() 
+				background alpha(#FF8C4D, .1)
+			&:after
+				position absolute 
+				right 10px 
+				top 13px
+				content ' '
+				border: solid transparent;
+				content: " ";
+				height: 0;
+				width: 0;
+				position: absolute;
+				pointer-events: none;
+				border-top-color: #1d1d1b;
+				border-width: 5px;
 	.icon
 		display table-cell
-		//width 60%
 		vertical-align top 
 		clearfix() 
 		.iname
@@ -2147,8 +2179,67 @@ h1.service-title
 	.iconright
 		display table-cell
 		width 25%
+.item-3col.active
+	.iobjects
+		a
+			background alpha(#FF8C4D, .2)
+.col-4
+	display table-cell 
+	width 25%
+	padding 10px
 
-
+.l-boxgrey
+	display none
+	position relative
+	padding 0 10px
+	margin 20px -20px -21px -20px
+	background #fafafa 
+	border 1px solid #E5E5E5
+	box-shadow inset 0 5px 11px rgba(1, 1, 1, 0.1)
+	clearfix() 
+	&:after
+		content " "
+		position absolute 
+		left 48.5% 
+		top -1px
+		width 30px
+		height 12px
+		background url("../img/sep-down.png") no-repeat
+	.boxgrey-name
+		padding 20px 0 5px 10px
+		clearfix() 
+		font-size 14px
+		text-transform uppercase
+		a.close
+			float left
+			display block
+			margin -8px 15px 0 0
+			width 32px
+			height 32px
+			background url("../img/icons/close-grey.png") no-repeat
+			opacity .7
+			&:hover
+				opacity 1
+				transform rotate(180deg)
+		h3
+			float left
+			margin 0
+			font-size 14px
+			text-transform uppercase
+			cursor pointer
+	.item-object
+		padding 10px 20px
+		background #fff
+		border 1px solid #E5E5E5
+		@extend .box-news .bcon .item
+		.irating
+			padding 10px 0 5px 0
+	.show-more 
+		padding 20px 0
+		text-align center
+		text-transform uppercase
+		
+		
 .box-text-item
 	position relative
 	padding 20px;
