--- a/site/css/style.css
+++ b/site/css/style.css
@@ -870,6 +870,9 @@ i {
 .fz14 {
   font-size: 14px;
 }
+.fz11 {
+  font-size: 11px;
+}
 .inline {
   display: inline-block;
   margin-right: 20px;
@@ -1913,19 +1916,19 @@ h1.service-title {
   padding: 20px;
   border: 1px solid #e6e6e6;
 }
-.notifybox .notify {
+.notify {
   margin-bottom: 20px;
   border: 1px solid #e6e6e6;
 }
-.notifybox .notify .notify-prev {
+.notify .notify-prev {
   position: relative;
   display: table-cell;
   vertical-align: top;
 }
-.notifybox .notify .notify-prev img {
+.notify .notify-prev img {
   display: block;
 }
-.notifybox .notify .notify-meta {
+.notify .notify-meta {
   display: table-cell;
   width: 100%;
   padding: 15px 30px;
@@ -1933,12 +1936,106 @@ h1.service-title {
   color: #333;
   font-size: 14px;
 }
-.notifybox .notify .notify-meta a {
+.notify .notify-meta a {
   color: #f85800;
 }
-.notifybox .notify .notify-meta .date {
+.notify .notify-meta .date {
   color: #ccc;
   font-size: 11px;
+}
+.editbox {
+  margin-bottom: 20px;
+  border: 1px solid #e6e6e6;
+}
+.editbox .editbox-prev {
+  position: relative;
+  display: table-cell;
+  vertical-align: top;
+  border-right: 1px solid #e6e6e6;
+}
+.editbox .editbox-prev img {
+  display: block;
+}
+.editbox .editbox-meta {
+  display: table-cell;
+  width: 100%;
+  padding: 15px 0px 15px 10px;
+  vertical-align: top;
+  color: #333;
+  font-size: 14px;
+}
+.editbox .editbox-meta .col-2 {
+  display: table-cell;
+  vertical-align: top;
+  padding: 0 20px;
+  width: 60%;
+  box-sizing: border-box;
+}
+.editbox .editbox-meta .col-2.valign {
+  vertical-align: top;
+  padding-top: 15px;
+}
+.editbox .editbox-meta .user {
+  font-size: 14px;
+}
+.editbox .editbox-meta .date {
+  color: #ccc;
+  font-size: 11px;
+}
+.editbox .editbox-admin {
+  position: relative;
+  display: table-cell;
+  background: #fafafa;
+  vertical-align: middle;
+  border-left: 1px solid #e6e6e6;
+}
+.editbox .editbox-admin a {
+  padding: 60px 20px 30px 20px;
+  display: table-cell;
+  color: #ccc;
+  vertical-align: middle;
+  text-decoration: none;
+}
+.editbox .editbox-admin a:hover {
+  color: #f85800;
+}
+.editbox .editbox-admin a.ok {
+  background: url("../img/icons/prove.png") center 40% no-repeat;
+}
+.editbox .editbox-admin a.ok:hover,
+.editbox .editbox-admin a.ok:after {
+  background: url("../img/icons/prove-a.png") center 40% no-repeat;
+}
+.editbox .editbox-admin a.cancel {
+  background: url("../img/icons/delete.png") center 40% no-repeat;
+}
+.editbox .editbox-admin a.cancel:hover,
+.editbox .editbox-admin a.cancel:after {
+  background: url("../img/icons/delete-h.png") center 40% no-repeat;
+}
+.editbox .editbox-admin .sep {
+  display: table-cell;
+  height: 10px;
+  border-right: 1px solid #e6e6e6;
+  width: 1px;
+  font-size: 10px;
+  content: " ";
+  margin-bottom: -30px;
+}
+a.link-black {
+  color: #333;
+}
+a.link-black:hover {
+  color: #f85800;
+}
+a.link-orange {
+  color: #f85800;
+}
+a.link-orange:hover {
+  color: rgba(248,88,0,0.7);
+}
+.font-grey {
+  color: #999;
 }
 .admin-box {
   position: absolute;
@@ -4402,12 +4499,15 @@ h1.service-title {
   background: #fff;
   color: #f85800;
 }
+.tabs__item.is-active a {
+  color: #f85800;
+}
 .tabs__item:first-child {
   border-left: 0;
 }
 .tabs__link {
   display: block;
-  padding: 18px 28px 16px;
+  padding: 18px 18px 16px 18px;
   color: #333;
   font-size: 14px;
   text-transform: uppercase;
@@ -5495,12 +5595,12 @@ footer .copy {
   top: 0;
   left: -40px;
   background: url("../img/icons/circular-delete.png") no-repeat center, #000;
-  -webkit-transition: all 0.4s ease-in-out;
-          transition: all 0.4s ease-in-out;
 }
 .articles__edit-images-list-item--edit:hover {
   cursor: pointer;
   background: url("../img/icons/circular-delete-h.png") no-repeat center, #000;
+  -webkit-transition: all 0.4s ease-in-out;
+          transition: all 0.4s ease-in-out;
 }
 .articles__edit-images-list-item:hover .articles__edit-images-list-item--edit {
   left: 0;
